--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -8,6 +8,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   position: fixed;
+  top: 0px;
   z-index: 9;
 
   .logo.nav-item {
